[gd_scene load_steps=24 format=3 uid="uid://dpp1p4ojueecq"]

[ext_resource type="Script" uid="uid://dopdna7j7y3i1" path="res://Scripts/UI/SkinSelector.gd" id="1_62kyk"]
[ext_resource type="Shader" uid="uid://bt2bvnojqjx08" path="res://Assets/Shaders/WhiteGlow.gdshader" id="1_kvpg8"]
[ext_resource type="Texture2D" uid="uid://jt26tknpri3k" path="res://Assets/Sprites/Player/PlayerSheet.png" id="2_h2q5m"]
[ext_resource type="Script" uid="uid://b4tsmsmhacccc" path="res://Scripts/UI/AnimatedTextureRect.gd" id="3_62kyk"]
[ext_resource type="Texture2D" uid="uid://dqp2huygukycd" path="res://Assets/Sprites/Player/Aura.png" id="4_0h23f"]
[ext_resource type="Texture2D" uid="uid://c2hcx5ijcprtv" path="res://Assets/Sprites/Others/PreviousButton.png" id="5_345ed"]
[ext_resource type="Texture2D" uid="uid://dwvsuouocv0ni" path="res://Assets/Sprites/Others/NextButton.png" id="6_jec2k"]
[ext_resource type="FontFile" uid="uid://donfw1xb4wbfa" path="res://Assets/Fonts/Jersey10-Regular.ttf" id="7_h2q5m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8xkfs"]
resource_local_to_scene = true
shader = ExtResource("1_kvpg8")
shader_parameter/line_color = Color(0.187176, 0.187176, 0.187176, 1)
shader_parameter/line_thickness = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_jw4so"]
atlas = ExtResource("2_h2q5m")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kbm5"]
atlas = ExtResource("2_h2q5m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu6sa"]
atlas = ExtResource("2_h2q5m")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbk70"]
atlas = ExtResource("2_h2q5m")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hhodm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kbm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu6sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbk70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw4so")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_133v5"]
shader = ExtResource("1_kvpg8")
shader_parameter/line_color = Color(0.188235, 0.188235, 0.188235, 1)
shader_parameter/line_thickness = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_m003h"]
atlas = ExtResource("4_0h23f")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukgio"]
atlas = ExtResource("4_0h23f")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxqth"]
atlas = ExtResource("4_0h23f")
region = Rect2(64, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_eekk6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukgio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxqth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m003h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_egppx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0sbp2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2q5m"]

[sub_resource type="LabelSettings" id="LabelSettings_62kyk"]
font = ExtResource("7_h2q5m")
font_size = 32

[node name="SkinSelector" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62kyk")

[node name="GridContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -176.5
offset_right = 78.0
offset_bottom = 176.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterAnimation" type="TextureRect" parent="GridContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_8xkfs")
layout_mode = 2
texture = SubResource("AtlasTexture_jw4so")
expand_mode = 5
stretch_mode = 5
script = ExtResource("3_62kyk")
sprites = SubResource("SpriteFrames_hhodm")
autoplay = true
playing = true

[node name="AuraAnimation" type="TextureRect" parent="GridContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_133v5")
layout_mode = 2
texture = SubResource("AtlasTexture_m003h")
expand_mode = 5
stretch_mode = 6
script = ExtResource("3_62kyk")
sprites = SubResource("SpriteFrames_eekk6")
frame = 2
playing = true
metadata/_custom_type_script = "uid://b4tsmsmhacccc"

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="PreviousSkin" type="Button" parent="GridContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_egppx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0sbp2")
icon = ExtResource("5_345ed")
flat = true

[node name="VSeparator" type="VSeparator" parent="GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_h2q5m")

[node name="NextSkin" type="Button" parent="GridContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_egppx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0sbp2")
icon = ExtResource("6_jec2k")
flat = true

[node name="LabelSkin" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Skin choisi"
label_settings = SubResource("LabelSettings_62kyk")
horizontal_alignment = 1
